# dojo.c

./: Cargo.toml
.cargo/: config.toml
bindings/cpp/: dojo.cpp  dojo.hpp
crates/c/: Cargo.toml
crates/uniffi/: Cargo.toml
crates/uniffi/src/: lib.rs
crates/uniffi/src/uniffi/: client.rs
crates/uniffi/src/uniffi/types/: achievement.rs  activity.rs  aggregation.rs  contract.rs  controller.rs  core.rs  entity.rs  event.rs  query.rs  schema.rs  token.rs  transaction.rs
