[package]
name = "dojo-uniffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
dojo-core = { workspace = true }

dojo-world.workspace = true
dojo-types.workspace = true
torii-proto.workspace = true
torii-client.workspace = true
torii-grpc-client.workspace = true

starknet.workspace = true
starknet-crypto.workspace = true

#tokio.workspace = true
url.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
stream-cancel.workspace = true
cainome.workspace = true
lazy_static.workspace = true
crypto-bigint.workspace = true
chrono.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

# WASM-specific dependencies
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
tsify-next.workspace = true
instant.workspace = true
gloo-timers.workspace = true
gloo-utils.workspace = true
console_error_panic_hook.workspace = true


# UniFFI
uniffi = { version = "0.30", features = ["bindgen", "cli"] }
uniffi_bindgen = "0.30"
camino = "1.1"
thiserror = "2"
hex = "0.4"
cargo_metadata = "0.19"
which = "7.0"
walkdir = "2.5"

# Platform-specific dependencies
urlencoding = "2.1.3"
base64 = "0.22.1"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.30", features = ["bindgen-tests"] }

# UniFFI bindgen binaries
[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"

[[bin]]
name = "uniffi-bindgen-kotlin"
path = "src/bin/uniffi-bindgen-kotlin.rs"

[[bin]]
name = "uniffi-bindgen-python"
path = "src/bin/uniffi-bindgen-python.rs"

[[bin]]
name = "uniffi-bindgen-csharp"
path = "src/bin/uniffi-bindgen-csharp.rs"

[[bin]]
name = "uniffi-bindgen-go"
path = "src/bin/uniffi-bindgen-go.rs"

[[bin]]
name = "uniffi-bindgen-cpp"
path = "src/bin/uniffi-bindgen-cpp.rs"

[[bin]]
name = "uniffi-bindgen-react-native"
path = "src/bin/uniffi-bindgen-react-native.rs"

[features]
default = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.39.2", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.8.1"
open = "5.3.2"
keyring = { version = "3.6.1", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
directories = "6.0.0"
tower-http = { version = "0.6.2", features = ["cors"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.39.2", default-features = false, features = ["sync", "macros", "rt", "time"]}
uuid = { version = "0.8.2", features = ["stdweb","wasm-bindgen","v4"] }
chrono = { workspace = true, features = ["wasmbind"] }
js-sys = { workspace = true }
